# tiny-whisper

./: CLAUDE.md  PLAN.md  README.md  index.html  indicator.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.tsx  Indicator.tsx  api.ts  index.css  indicator-main.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  hotkey.rs  main.rs  models.rs  paster.rs  recorder.rs  session_worker.rs  sessions.rs  state.rs  transcriber.rs  vad.rs
src-tauri/src/transcriber/: mod.rs  parakeet_onnx.rs  sortformer.rs  whisper_ggml.rs
src/components/: SessionsCard.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
