[package]
name = "tiny-whisper"
version = "0.1.0"
description = "Local Whisper live-transcribe with push-to-talk"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
log = "0.4"
env_logger = "0.11"

tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs", "io-util"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

cpal = "0.15"
rubato = "0.15"
hound = "3.5"

# whisper-rs. GPU backend is opt-in via the `gpu` cargo feature below so the
# default CPU build doesn't require a Vulkan SDK. `use_gpu(bool)` on
# WhisperContextParameters toggles at runtime when a GPU backend is compiled in.
whisper-rs = { version = "0.16", default-features = false }

# Parakeet ASR (CTC + TDT) via ONNX Runtime. CPU by default; the `gpu` feature
# below enables DirectML on Windows so we can match whisper's GPU toggle.
parakeet-rs = { version = "0.3", features = ["sortformer"] }

[dependencies.arboard]
version = "3"

[dependencies.enigo]
version = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enable with `cargo tauri build --features gpu` (or `--features gpu` on cargo commands).
# macOS: Metal (whisper) + CoreML (parakeet). For Windows/Linux swap to:
#   ["whisper-rs/vulkan", "parakeet-rs/directml"]
gpu = ["whisper-rs/metal", "parakeet-rs/coreml"]
